Removes s3 upload
